--- a/prayer-times-android/app/src/main/res/values/strings.xml
+++ b/prayer-times-android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Prayer Times</string>
+    <string name="date_example">9999-12-30</string>
+    <string name="time_remaining_example">time remaining to next prayer</string>
+    <string name="time_example">99:99</string>
 </resources>
